src/test/deca/syntax/valid/provided/FloatTest.deca
{
float x = 1.8;
int j = 888;
}