src/test/deca/syntax/invalid/if_ident.deca

{
    float if=2.5;
}